# 7xAI-challenge-day2-image-search

./: README.md  core.py  docker-compose.yaml  main.py  pyproject.toml  template.env
public/templates/: index.html
